--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>java-http-server</artifactId>
+    <groupId>cn.aneureka</groupId>
+    <artifactId>teddy</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -77,8 +77,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
